cursive-bootstrap/tests/ui/E-MOD/E-MOD-1201.cursive
// RUN: compile-fail
// DIAG: E-MOD-1201
// SPEC: 5.1
// DESC: External using path without required import

using external_assembly::module::item //~ ERROR E-MOD-1201

public procedure main(move ctx: Context) -> i32 {
    return 0
}
